reset colours for the anchor tags

--- a/styles/global.css
+++ b/styles/global.css
@@ -10,7 +10,7 @@ body {
   padding: 0;
   margin: 0;
   outline: none;
-  color: var(--dark);
+  color: var(--blue);
   background-color: var(--lighter);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -27,12 +27,12 @@ body {
 a,
 a:link,
 a:visited {
-  color: var(--darker);
+  color: var(--brown);
   text-decoration: none;
 }
 
 a:hover {
-  color: var(--dark);
+  color: var(--orange);
   opacity: 0.9;
 }
 
