change default text colour to black

--- a/styles/global.css
+++ b/styles/global.css
@@ -10,7 +10,7 @@ body {
   padding: 0;
   margin: 0;
   outline: none;
-  color: var(--blue);
+  color: var(--black);
   background-color: var(--lighter);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
