add a lighter colour to the palette

--- a/styles/global.css
+++ b/styles/global.css
@@ -4,6 +4,7 @@ body {
   --black: #001524;
   --blue: #15616d;
   --light: #ffecd1;
+  --lighter: #fffff0;
   --orange: #ff7d00;
   --brown: #78290f;
 
